update activity model to be coherent with methodology, closes #103

--- a/app/views/projects/_dashboard.html.erb
+++ b/app/views/projects/_dashboard.html.erb
@@ -95,7 +95,7 @@
             <% end %>
             <% @upcoming_activities.first(10).each do |ac| %>
             <tr>
-              <td><%= ac.scheduling %></td>
+              <td><%= ac.start_date %></td>
               <td><%= ac.title %></td>
             </tr>
             <% end %>
