--- a/app/views/objectives/stage5.html.erb
+++ b/app/views/objectives/stage5.html.erb
@@ -53,7 +53,8 @@
                 </thead>
                 <tbody>
                   <tr ng-repeat="activity in activities">
-                    <td nowrap>{{activity.scheduling | date: "shortDate" }}</td>
+                    <td nowrap>{{activity.start_date | date: "shortDate" }}
+                    <div ng-if="activity.end_date"> - {{activity.end_date | date: "shortDate" }}</div></td>
                     <td>{{activity.description}}</td>
                     <td>
                       <ul class="list-unstyled" ng-repeat="actor in get_actor_names(activity.actor_ids, actors) track by $index">
@@ -66,7 +67,7 @@
                     <td class="text-right" nowrap>
                       <i class="fa fa-pencil-square-o" ng-click="add_edit_activity(activity)" title="Edit"></i>
                       <i class="fa fa-line-chart" ng-click="add_edit_indicator(activity)" title="Indicators"></i>
-                      <a href="" id="activity_{{activity.id}}"></a><i class="fa fa-calendar" ng-if="activity.scheduling" ng-click="get_ical(activity)" title="iCal"></i>
+                      <a href="" id="activity_{{activity.id}}"></a><i class="fa fa-calendar" ng-if="activity.start_date" ng-click="get_ical(activity)" title="iCal"></i>
                       <i class="fa fa-trash" ng-click="delete_activity(activity)" title="Delete"></i>
                   </tr>
                 </tbody>
@@ -112,7 +113,7 @@
                     </div>
                     <div class="col-xs-12 col-md-6">
                       <ul class="list-unstyled" ng-repeat="day in days" ng-if="day.events.length">
-                          {{day.date.format('D MMM')}}
+                          <h4>{{day.date.format('D MMMM YYYY')}}</h4>
                         <li ng-repeat="d in day.events">
                           <ul class="list-unstyled" ng-if="d.title">
                             <li>
