--- a/app/views/devise/mailer/exist_user_share.html.erb
+++ b/app/views/devise/mailer/exist_user_share.html.erb
@@ -7,7 +7,7 @@
 <body>
   <p><%= t('.exist_add_to_share') %></p>
 
-  <p><%= link_to @project.title, project_url(@project) %></p>
+  <p><%= link_to @project.title, project_url(@project), subdomain: @subdomain%></p>
 
   <% if @message %>
     <p><%= @message %></p>
