nuevas secciones landing sin diseño

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -29,6 +29,64 @@
     </div>
   <% end %>
 <% end %>
+<div class="estratega">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 col-md-offset-2">
+        <h2><%= t('.what_title') %></h2>
+        <p><%= t('.what_txt') %></p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="testimonial">
+  <div class="row">
+     <div class="col-md-12">
+        <h2>Escribe tu historia, nosotros te ayudamos a cumplirla...</h2>
+      </div>
+  </div>
+</div>
+<div class="estratega">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h2>Tu organización necesita Estratega si:</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <p>¿Tienes objetivos de acción claros pero no logras cumplirlos?</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <p>¿No logran conectar con los actores sociales con los que te deberías relacionar?</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <p>¿Tu presupuesto organizacional es escaso y necesitas optimizarlo de la mejor manera?</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <p>¿Existe alta rotación en los miembros de tu organización?</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <p>¿Tus flujos de comunicación interna y externa trabajan en función de tu meta institucional?</p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="testimonial">
+  <div class="row">
+     <div class="col-md-12">
+        <h2>Reduce los riesgos y aumenta el desempeño de tu equipo al momento de incidir en políticas públicas</h2>
+      </div>
+  </div>
+</div>
 <div class="benefits">
   <div class="container">
     <div class="row">
