--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -502,11 +502,20 @@ div#resources_paginate {
   right: 0;
   left: auto;
 }
-.benefits, .estratega{
+.benefits {
   padding: 50px 0;
   text-align: center;
   background-color: #00C2E4;
   /*height: 650px;*/
+}
+.estratega{
+  padding: 50px 0;
+  text-align: left;
+  background-color: #00C2E4;
+}
+.estratega h2{
+  text-align: center;
+  margin-bottom: 50px;
 }
 .benefits p, .estratega p {
   color: #ffffff;
@@ -546,6 +555,7 @@ div#resources_paginate {
   font-weight: 400;
   padding-top: 100px;
   padding-bottom: 100px;
+  color: #ffffff;
 }
 
 .testimonial h2 {
