--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,14 +1,11 @@
-<div align="center">
+<div>
   <h3><%= t('.send_us')%></h3>
 
-  <%= simple_form_for @contact_message, url: contacts_path, :html => {:class => 'form-horizontal' } do |f| %>
-    <%= f.input :name, label: t('.name'), placeholder: t('.name_placeholder'),  :required => true %>
-    <%= f.input :email, label: t('.email'), placeholder: t('.email_placeholder'), :required => true %>
-    <%= f.input :message, label: t('.message'), placeholder: t('.message_placeholder'), :as => :text, :required => true %>
-    
-    <div>
-      </br>
-      <%= f.button :submit, t('.send_message'), :class=> "btn btn-primary" %>
-    </div>
+  <%= simple_form_for @contact_message, url: contacts_path do |f| %>
+    <%= f.input :name, label: t('.name'), placeholder: t('.name_placeholder'),  :required => true , wrapper_html: { class: 'form-group' } %>
+    <%= f.input :email, label: t('.email'), placeholder: t('.email_placeholder'), :required => true, wrapper_html: { class: 'form-group' } %>
+    <%= f.input :message, label: t('.message'), placeholder: t('.message_placeholder'), :as => :text, :required => true, wrapper_html: { class: 'form-group' } %>
+
+    <%= f.button :submit, t('.send_message'), :class=> "btn btn-primary" %>
   <% end %>
 </div>
