added completion mark to objectives

--- a/app/views/objectives/_form.html.erb
+++ b/app/views/objectives/_form.html.erb
@@ -6,6 +6,7 @@
     <%= f.input :description %>
 	  <%= f.association :solutions, as: :select %>
     <%= f.input :prioritized %>
+    <%= f.input :completion_mark %>
   </div>
 
   <div class="form-actions">
