--- a/app/views/projects/_objective_modal.html.erb
+++ b/app/views/projects/_objective_modal.html.erb
@@ -24,6 +24,11 @@
         <input type="checkbox" ng-model="current_objective.prioritized" checked> <%= t('.prioritized').html_safe %>
       </label>
     </div>
+    <div class="form-group">
+      <label>
+        <input type="checkbox" ng-model="current_objective.completion_mark" checked> <%= t('.completion_mark').html_safe %>
+      </label>
+    </div>
     <hr>
   </div>
   <div class="modal-footer">
