--- a/app/views/layouts/_navbar_signin.erb
+++ b/app/views/layouts/_navbar_signin.erb
@@ -14,7 +14,7 @@
   <div id="navbar" class="nav navbar-collapse collapse pull-right">
     <ul class="nav navbar-nav">
       <li class="dropdown">
-        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">Iniciar Sesión <span class="caret"></span></button>
+        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><%= t('.sign_in') %><span class="caret"></span></button>
         <ul class="dropdown-menu dropdown-menu-button">
           <li>
             <%= render 'layouts/signin' %>
